tdf#151492 PPTX export: fix connection points regression

caused by commit 4d153517183193f468dee9148c94fe9d874bacb3
(tdf#149697 PPTX export: fix changing place of connection points).

Change-Id: I6134f18f3c32182a2f5d7295e2511da192dd20c0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141427
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>